# VulkanLearn

./: .gitignore  CMakeLists.txt  DualQuaternion.md  LICENSE  README.md  Win32Entry.cpp  ignore.txt
Base/: Base.h  BaseComponent.cpp  BaseComponent.h  BaseObject.cpp  BaseObject.h  BaseSingleton.h  FrameEventListener.h
Maths/: AssimpDataConverter.cpp  AssimpDataConverter.h  DualQuaternion.h  DualQuaternion.inl  MathUtil.cpp  MathUtil.h  Matrix.h  Matrix3x3.h  Matrix3x3.inl  Matrix4x4.h  Matrix4x4.inl  Plane.h  Plane.inl  PyramidFrustum.h  PyramidFrustum.inl  Quaternion.h  Quaternion.inl  Vector.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
VulkanLearn/: VulkanLearn.cpp  VulkanLearn.h
appEntry/: AppEntry.cpp  AppEntry.h
class/: AssimpSceneReader.cpp  AssimpSceneReader.h  BloomMaterial.cpp  BloomMaterial.h  BloomPass.cpp  BloomPass.h  ChunkBasedUniforms.cpp  ChunkBasedUniforms.h  CombineMaterial.cpp  CombineMaterial.h  ComputeMaterialFactory.cpp  ComputeMaterialFactory.h  CustomizedComputeMaterial.cpp  CustomizedComputeMaterial.h  CustomizedRenderPass.cpp  CustomizedRenderPass.h  DOFMaterial.cpp  DOFMaterial.h  DeferredMaterial.cpp  DeferredMaterial.h  DeferredRenderPass.cpp  DeferredRenderPass.h  DeferredShadingPass.cpp  DeferredShadingPass.h  Enums.cpp  Enums.h  ForwardMaterial.cpp  ForwardMaterial.h  ForwardRenderPass.cpp  ForwardRenderPass.h  FrameBufferDiction.cpp  FrameBufferDiction.h  FrameEventListener.h  FrameEventManager.cpp  FrameEventManager.h  FrameWorkManager.cpp  FrameWorkManager.h  GBufferInputUniforms.cpp  GBufferInputUniforms.h  GBufferPass.cpp  (+85 more)
common/: AutoPTR.h  Enums.h  GlobalBuffers.cpp  GlobalBuffers.h  Macros.h  PerObjectBuffer.cpp  PerObjectBuffer.h  RefCounted.h  Singleton.cpp  Singleton.h  Util.cpp  Util.h
component/: AnimationController.cpp  AnimationController.h  BoneObject.cpp  BoneObject.h  Camera.cpp  Camera.h  Character.cpp  Character.h  DirectionLight.cpp  DirectionLight.h  FrustumJitter.cpp  FrustumJitter.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  PhysicalCamera.cpp  PhysicalCamera.h  PlanetGenerator.cpp  PlanetGenerator.h  test.html
data/models/: rp_sophia_animated_003_idling.FBX
data/shaders/: background_motion_gen.frag  background_motion_gen.frag.spv  background_motion_gen.vert  background_motion_gen.vert.spv  bloom_downsamplebox13.comp  bloom_downsamplebox13.comp.spv  bloom_downsamplebox13.frag  bloom_downsamplebox13.frag.spv  bloom_gen.frag  bloom_gen.frag.spv  bloom_prefilter.comp  bloom_prefilter.comp.spv  bloom_prefilter.frag  bloom_prefilter.frag.spv  bloom_upsampletent.comp  bloom_upsampletent.comp.spv  bloom_upsampletent.frag  bloom_upsampletent.frag.spv  brdf_lut.frag  brdf_lut.frag.spv  brdf_lut.vert  brdf_lut.vert.spv  combine.comp  combine.comp.spv  combine.frag  combine.frag.spv  compile_all_shader.bat  compile_all_shader.py  delta_rayleigh_mie_gen.comp  delta_rayleigh_mie_gen.comp.spv  direct_irradiance.comp  direct_irradiance.comp.spv  dof_blur.comp  dof_blur.comp.spv  dof_blur.frag  dof_blur.frag.spv  dof_combine.comp  dof_combine.comp.spv  dof_combine.frag  dof_combine.frag.spv  (+103 more)
data/shaders/atmosphere/: definitions.sh  functions.sh  header.sh  transmittance_gen.frag  transmittance_gen.frag.spv
data/textures/cerberus/: ao_1024.ktx  metallic_1024.ktx  roughness_1024.ktx
planet/: PlanetLODLayer.cpp  PlanetLODLayer.h  PlanetTile.cpp  PlanetTile.h
scene/: SceneGenerator.cpp  SceneGenerator.h
thread/: PerFrameData.cpp  PerFrameData.h  ThreadCoordinator.cpp  ThreadCoordinator.h  ThreadTaskQueue.hpp  ThreadWorker.cpp  ThreadWorker.hpp
vulkan/: Buffer.cpp  Buffer.h  BufferBase.cpp  BufferBase.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  DeviceMemoryManager.cpp  DeviceMemoryManager.h  DeviceObjSingleton.cpp  DeviceObjSingleton.h  DeviceObjectBase.h  Fence.cpp  Fence.h  FrameManager.cpp  FrameManager.h  Framebuffer.cpp  Framebuffer.h  GlobalDeviceObjects.cpp  GlobalDeviceObjects.h  GlobalVulkanStates.cpp  GlobalVulkanStates.h  GraphicPipeline.cpp  GraphicPipeline.h  Image.cpp  Image.h  ImageView.cpp  (+74 more)
