cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
cmake_policy(VERSION 3.5)

set(NAME VulkanLearn)

project(${NAME} CXX)

include_directories(external/vulkan)
include_directories(external/assimp)
include_directories(external/gli)
include_directories(external/gli/external)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

find_library(VULKAN_LIB NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/lib/vulkan)
find_library(ASSIMP_LIB NAMES assimp PATHS ${CMAKE_SOURCE_DIR}/lib/assimp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

function(buildExample EXAMPLE)
	#file(GLOB PROJECT_HEADER ${EXAMPLE}/*.h)
	#file(GLOB PROJECT_SOURCE ${EXAMPLE}/*.cpp)
	file(GLOB VULKAN vulkan/*.h vulkan/*.cpp)
	file(GLOB MATHS_DEFS maths/*.h maths/*.inl maths/*.cpp)
	file(GLOB COMMON common/*.h common/*.cpp)
	file(GLOB BASE base/*.h base/*.cpp)
    file(GLOB THREAD thread/*.h thread/*.cpp thread/*.hpp)
	file(GLOB SHADER data/shaders/*.vert data/shaders/*.frag)
	file(GLOB COMPONENT component/*.h component/*.cpp)
	IF(WIN32)
		SET(PROJECT_WIN32_SOURCE "${PROJECT_SOURCE_DIR}/Win32Entry.cpp")
	ENDIF(WIN32)
	message(STATUS ${PROJECT_SOURCE})
	add_executable(${EXAMPLE} WIN32 ${PROJECT_SOURCE} ${PROJECT_HEADER} ${PROJECT_WIN32_SOURCE} ${MATHS_DEFS} ${COMMON} ${BASE} ${THREAD} ${SHADER} ${COMPONENT} ${VULKAN})
	source_group("maths\\" FILES ${MATHS_DEFS})
	source_group("common\\" FILES ${COMMON})
	source_group("base\\" FILES ${BASE})
	source_group("vulkan\\" FILES ${VULKAN})
	source_group("thread\\" FILES ${THREAD})
	source_group("shaders\\" FILES ${SHADER})
	source_group("component\\" FILES ${COMPONENT})
	target_link_libraries(${EXAMPLE} ${VULKAN_LIB} ${ASSIMP_LIB})
	set_target_properties(${EXAMPLE} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
endfunction(buildExample)

function(buildExamples EXAMPLES)
	foreach(EXAMPLE ${EXAMPLES})
		buildExample(${EXAMPLE})
	endforeach(EXAMPLE)
endfunction(buildExamples)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/" )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/" )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/" )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/" )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/" )

set(PROJECTS VulkanLearn)
buildExamples(${PROJECTS})